[metadata]
name = MKUtils
version = 1.0.1
description = Python utility functions for common tasks. 
author = Morten Kals
lisence = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Origramming Language :: Python :: 3.9
    Origramming Language :: Python :: 3.8
    Origramming Language :: Python :: 3.7
    Origramming Language :: Python :: 3.6
    Origramming Language :: Python :: 3 :: Only
    Origramming Language :: Python :: 3



[options]
packages = MKUtils
install_requires = 
    six>=1.16.0
python_requires = >= 3.6
package_dir = =src
include_package_data = True
zip_safe = no

[options.package_data]
* = *.xml

[options.extras_require]
testing=
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 300